apps/pihole/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  labels:
    app.kubernetes.io/name: pihole
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: pihole

---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  labels:
    app.kubernetes.io/name: pihole
spec:
  type: LoadBalancer
  ports:
  - port: 53
    targetPort: dns-tcp
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: dns-udp
    protocol: UDP
    name: dns-udp
  selector:
    app.kubernetes.io/name: pihole
