apps/pihole/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
    cert-manager.io/cluster-issuer: letsencrypt
    flame.pawelmalak/type: app
    flame.pawelmalak/name: pihole
    flame.pawelmalak/url: https://dns.${domain}/admin
    flame.pawelmalak/icon: router
spec:
  ingressClassName: traefik-internal
  tls:
  - hosts:
      - dns.${domain}
    secretName: pihole-tls
  rules:
    - host: dns.${domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 80
